# genetic-sudoku

./: .gitignore  CLAUDE.md  Cargo.toml  FINDINGS.md  Makefile  PLAN.md  README.md  clippy.toml
.github/workflows/: ci.yml  rust.yml
benches/: benches.rs  sudoku.rs
boards/: al-escargot.txt  default-solution.txt  default.txt  easy4.txt  medium.txt  trivial.txt  unsat.txt
demo/: demo.tape
src/: errors.rs  genetics.rs  lib.rs  main.rs  sudoku.rs
src/genetics/: inner.rs
src/sudoku/: inner.rs
