[package]
name = "genetic-sudoku"
version = "0.3.0"
edition = "2024"
authors = ["Eric Wohltman <eric.wohltman@gmail.com>", "Bart Massey <bart@cs.pdx.edu>"]
repository = "https://github.com/ewohltman/genetic-sudoku"
keywords = ["sudoku", "solver", "genetic", "algorithm"]
categories = ["algorithms", "games"]
description = "Genetic Algorithm Sudoku solver"
license-file = "LICENSE"

[dependencies]
arrayvec = "0.7"
clap = { version = "4.5.29", features = ["derive"] }
rayon = "1.5"
rand = "0.9.0"
rand_pcg = "0.9.0"
ratatui = "0.29.0"
crossterm = "0.28.1"
simple-eyre = "0.3.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false
