[package]
name = "genetic-sudoku"
version = "0.3.0"
edition = "2024"
authors = ["Eric Wohltman <eric.wohltman@gmail.com>", "Bart Massey <bart@cs.pdx.edu>"]
repository = "https://github.com/ewohltman/genetic-sudoku"
keywords = ["sudoku", "solver", "genetic", "algorithm"]
categories = ["algorithms", "games"]
description = "Genetic Algorithm Sudoku solver"
license = "MIT"
rust-version = "1.97"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
rayon = "1.12"
rand = "0.10"
rand_pcg = "0.10"
ratatui = "0.30"
simple-eyre = "0.3.1"

[dev-dependencies]
criterion = "0.8"
tempfile = "3"

[[bench]]
name = "benches"
harness = false

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
